# escalite

./: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: main.yml  snyk.yml
escalite/: escalite.py
escalite/builders/: query_builder.py
escalite/formatters/: dict_table_formatter.py
escalite/notifiers/: base_notifier.py  email_notifier.py  notifier_factory.py  notifier_manager.py  slack_notifier.py  telegram_notifier.py  whatsapp_notifier.py
escalite/templates/: email_template.py
escalite/utils/: config_util.py  constants.py
scripts/: test.sh
tests/: test_escalite.py
tests/escalite/: test_escalite.py
tests/escalite/formatters/: test_dict_table_formatter.py
tests/escalite/notifiers/: test_email_notifier.py  test_notifier_factory.py  test_notifier_manager.py  test_slack_notifier.py  test_telegram_notifier.py  test_whatsapp_notifier.py
