[tool.poetry]
name = "escalite"
version = "0.1.0"
description = "A Python library for collecting and dumping data from an api service."
authors = ["Rakibul Haq <haq.rakibul@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
black = "*"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
